<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.matsgemmeke</groupId>
        <artifactId>battlegrounds-parent</artifactId>
        <version>3.0.0</version>
    </parent>

    <artifactId>battlegrounds-dist</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <directory>../target</directory>
        <finalName>${project.parent.name}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.20</version>
                <configuration>
                    <!-- Allow JUnit to access the test classes -->
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                    <relocations>
                        <relocation>
                            <pattern>co.aikar.commands</pattern>
                            <shadedPattern>nl.matsgemmeke.libs.acf</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.locales</pattern>
                            <shadedPattern>nl.matsgemmeke.libs.acf</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.google</pattern>
                            <shadedPattern>nl.matsgemmeke.libs.google</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>jakarta</pattern>
                            <shadedPattern>nl.matsgemmeke.libs.jakarta</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>javax</pattern>
                            <shadedPattern>nl.matsgemmeke.libs.javax</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.j256.ormlite</pattern>
                            <shadedPattern>nl.matsgemmeke.libs.ormlite</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.github.matsgemmeke</groupId>
            <artifactId>battlegrounds-core</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.matsgemmeke</groupId>
            <artifactId>battlegrounds-compatibility-v1_20_R2</artifactId>
            <version>${project.version}</version>
        </dependency>
    </dependencies>
</project>